# OpencvDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/scut/dongxia/opencvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/source/: native-lib.cpp
app/src/main/java/cn/scut/dongxia/opencvdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/scut/dongxia/opencvdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
